tweaks to the never-ending revisions of §4

--- a/forallx-adl-tfl.tex
+++ b/forallx-adl-tfl.tex
@@ -64,7 +64,7 @@ Since arguments are made of sentences, the logical structure of an argument will
 
 Let's look at a more complicated example. Consider \begin{earg}
 	\item[\ex{alice}] Alice will ace the test, or Bob will.
-\end{earg} First we note that this sentence is elliptical, the verb phrase `ace the test' being omitted after `Bob will' as it is understood to be supplied by the first clause of the sentence.\footnote{A closely related example is discussed by Paul Elbourne, \emph{Meaning}, Oxford University Press, 2011, pp. 74–6. He argues that this kind of ellision is crucial evidence for phrase structure grammars, for only phrases can be omitted in this way: witness the ungrammatical `Alice will ace the test and Bob will the', where arbitrary words are omitted that do not form a grammatical phrase. This is evidence that English syntax is sensitive to the phrasal structure of sentences, and does not treat them as merely a string of words.} The full tree, with the elided phrase supplied (marked by having the VP label in a box at the lower right), is depicted in Figure \ref{fig:alice}. In this example, the whole sentence is a compound of two clauses which are sentences in their own right, or \define{subsentences}, connected by the coordinator `or'.
+\end{earg} First we note that this sentence is elliptical, the verb phrase `ace the test' being omitted after `Bob will' as it is understood to be supplied by the first clause of the sentence.\footnote{A closely related example is discussed by Paul Elbourne, \emph{Meaning}, Oxford University Press, 2011, pp. 74–6. He argues that this kind of ellision is crucial evidence for phrase structure grammars, for only phrases can be omitted in this way: witness the ungrammatical `Alice will ace the test and Bob will the', where arbitrary words are omitted that do not form a grammatical phrase. This is evidence that English syntax is sensitive to the phrasal structure of sentences, and does not treat them as merely a string of words.} The full tree, with the elided phrase supplied (marked by having the VP label in a box at the lower right), is depicted in Figure \ref{fig:alice}. In this example, the whole sentence is a compound of two clauses which are sentences in their own right, or \define{subsentences}, connected by `or'.
 \begin{figure}
 \begin{tikzpicture}[sibling distance=13pt]
  	\Tree [.S [.S [.NP Alice ] [.VP will [.VP ace [.DP the test ] ] ] ] [ [.Coord or ] [.S [.NP Bob ] [.VP will [.\node[draw]{VP}; \edge[roof]; {ace the test}  ] ] ] ] ]
@@ -93,7 +93,12 @@ The following, in contrast with the previous examples, are non-canonical clauses
 
 \section{Identifying argument structure}\label{ss.idargstr}
 
-Our topic is not English grammar. But the idea of a canonical clause is illuminating for the logic we are examining in this part of the course. Sentential logic is, more or less, the logic that helps us understand and analyse arguments whose conclusiveness depends on their constituent canonical clauses and how they are joined together, particularly by coordinating expressions like `or' and `if' and by negative expressions like `not'.
+Our topic is not English grammar. But the idea of a canonical clause is illuminating for the logic we are examining in this part of the course. Sentential logic is, more or less, the logic that helps us understand and analyse arguments whose conclusiveness depends on their constituent canonical clauses and how they are joined together by \define{sentence connectives}. The sentence connectives we focus on are a grammatically diverse group, including \begin{description}
+	\item[Coordinators] including ‘and’, ‘or’, ‘if and only if ’ (also ‘but’)\item[Adjunct heads] including ‘if … then …’, ‘only if’ (also ‘unless’, ‘because’, ‘since’, ‘hence’ – though we treat these last as signalling premises and conclusions of arguments)
+	\item[Negatives] including ‘not’, ‘‐n’t’, ‘it is not the case that’ (‘never’).
+	\item And there are others that we won’t deal with (‘always’, ‘might’).
+\end{description}
+
 
 How can we identify the logical structure of an argument? The logical structure of an argument is the form one arrives at by `abstracting away' the details of the words in an argument, \emph{except for a special set of words}, the \define{structural words}. This connects with what we have just been saying, because in many of the examples from §\ref{s:ValidityInVirtueOfForm}, the arguments can be analysed as involving canonical clauses which are linked by the structural words `and', `or', `not', `if … then …' and `… if and only if …'. So our efforts to identify the logical structure of arguments often coincide with linguist's efforts to identify the canonical clauses that constitute the sentences in those arguments – or, at least, constitute some plausible paraphrase or reformulation of those sentences.
 
@@ -126,7 +131,7 @@ This raises another question. What makes the words on our list special? Logician
 
 Linguists take a very expansive view of structural words, so that the class of canonical clauses is rather small, and there is a lot of structure to be identified in natural language. For example, the presence of modal auxiliaries (like `will' or `must', as in `James \underline{must} eat'), verb inflections other than the present tense (e.g., `they \underline{took} snuff'), and subordination (as in `\underline{Etta knew that} peaches were abundant'), in addition to items on our list of structural words, suffices to make a clause non-canonical. And there are logics which do take these to be structural words: modal logics, tense logics, and epistemic logics treat these as structural words and provide recipes for the structural analysis of arguments that abstract away features other than these words. But there is no fundamental principle that divides words once and for all into structural words and other words. So logicians are more interested in quasi-canonical clauses, given some fixed list of structural words, when using logic to model or represent natural languages. 
 
-We will start simply, and focus on the list of truth-functional coordinators, principally `and', `or', `not', `if … then …' and `… if and only if …'. There are practical reasons why these words are useful ones to focus on initially, which I will now discuss.
+We will start simply, and focus on the list of truth-functional sentence connectives, principally `and', `or', `not', `if … then …' and `… if and only if …'. There are practical reasons why these words are useful ones to focus on initially, which I will now discuss.
 
 \section{Formal languages}
 
@@ -134,19 +139,19 @@ In logic, a \define{formal language} is a language which is particularly suited 
 
 Formal languages are not the same as natural languages, like English. The languages we will be looking at are much more limited in their expressive power than English, and not subject to ambiguity or imprecision in the way that English is. But a formal language can be very useful in \emph{representing} or modelling features of natural language. In particular, they are very good at capturing the \emph{structure} of natural language sentences and arguments, because we can design them specifically to represent a particular level of structural analysis. The semantics we give for such languages reflects that this is their primary use, as you will see. The languages assign fixed meanings only to those expressions which can be used to represent structure, but (unlike English) not every expression is treated as structural.
 
-In this chapter we will begin developing a formal language which will allow us to represent many sentences of English, and arguments involving those sentences. The language will have a very small basic vocabulary, since we are designing it to represent the sentential structure of the examples with which we began. So it will have expressions corresponding to the English coordinators `and', `or', `not' and `if …, then …' and `if and only if'. The language represents these coordinators by expressions called \define{sentence connectives}, so-called because, like coordinators, they allow simple sentences of the language to be combined into more complex sentences. These words are a good class to focus on in developing a formal language, because languages with expressions analogous to these feature a good balance between being useful and being well behaved and easy to study. The language we will develop is called \TFL, and the study of that language and its features is called \emph{sentential logic}. (It also has other names: see Appendix~\ref{app.notation}.) 
+In this chapter we will begin developing a formal language which will allow us to represent many sentences of English, and arguments involving those sentences. The language will have a very small basic vocabulary, since we are designing it to represent the sentential structure of the examples with which we began. So it will have expressions corresponding to the English sentence  connectives `and', `or', `not' and `if …, then …' and `if and only if'. The language represents these English connectives by its own class of dedicated sentence connectives which allow simple sentences of the language to be combined into more complex sentences. These words are a good class to focus on in developing a formal language, because languages with expressions analogous to these feature a good balance between being useful and being well behaved and easy to study. The language we will develop is called \TFL, and the study of that language and its features is called \emph{sentential logic}. (It also has other names: see Appendix~\ref{app.notation}.) 
 
-Once we have our formal language \TFL, we will be able to go on (in chapter \ref{ch.TruthTables}) to show that it has a very nice feature: it is able to represent the structure of a large class of valid natural language arguments. So while logic can't help us with every good argument, and it can't even help us with every conclusive argument, it can help us to understand arguments that are valid, or conclusive due to their structure, when that structure involves the coordinators `and', `or', `not', `if' and various related expressions. 
+Once we have our formal language \TFL, we will be able to go on (in chapter \ref{ch.TruthTables}) to show that it has a very nice feature: it is able to represent the structure of a large class of valid natural language arguments. So while logic can't help us with every good argument, and it can't even help us with every conclusive argument, it can help us to understand arguments that are valid, or conclusive due to their structure, when that structure involves  `and', `or', `not', `if' and various other expressions. 
 
-We will see later in this book that one could take additional  expressions in natural language to be involved is determining the structure of a sentence or argument. The language we develop in chapter~\ref{ch.FOL} is one that is suited to represent what we get when we take names like `Juanita', predicates like `is a vixen' or `is a fox', and quantifier expressions like `every' and `some' to be structural – see also §\ref{s:MoreMonadic}. And as we have mentioned, there are still other formal logical languages, unfortunately beyond the scope of this book, which take still other words or grammatical categories as structural: logics which take modal words like `necessarily' or `possibly' as structural, and logics which take temporal adverbs like `always' and `now' as structural.\footnote{Some arguments will be valid in richer logical frameworks, but not according to the more austere framework for logical structure provided by \TFL. For example `Sylvester is always active; so Sylvester is active now' is conclusive. From the point of view of temporal logic, the argument has this form `Always A; so now A', which is valid in normal temporal logics. But it is not valid according to \TFL, because the premise `Sylvester is always active' has no internal structural words that occur on the list of coordinators that \TFL\ can represent.} What we notice here is that using logic to model natural language arguments inevitably involves a compromise. If we have lots of structural words, we can show many conclusive arguments to be valid, but our logic is complex and involves many different sentence connectives. If we take relatively few words as structural, we can represent fewer conclusive arguments as valid, but our formal language is a lot easier to work with. 
+We will see later in this book that one could take additional  expressions in natural language to be involved is determining the structure of a sentence or argument. The language we develop in chapter~\ref{ch.FOL} is one that is suited to represent what we get when we take names like `Juanita', predicates like `is a vixen' or `is a fox', and quantifier expressions like `every' and `some' to be structural – see also §\ref{s:MoreMonadic}. And as we have mentioned, there are still other formal logical languages, unfortunately beyond the scope of this book, which take still other words or grammatical categories as structural: logics which take modal words like `necessarily' or `possibly' as structural, and logics which take temporal adverbs like `always' and `now' as structural.\footnote{Some arguments will be valid in richer logical frameworks, but not according to the more austere framework for logical structure provided by \TFL. For example `Sylvester is always active; so Sylvester is active now' is conclusive. From the point of view of temporal logic, the argument has this form `Always A; so now A', which is valid in normal temporal logics. But it is not valid according to \TFL, because the premise `Sylvester is always active' has no internal structural words that occur on the list of sentence connectives that \TFL\ represents.} What we notice here is that using logic to model natural language arguments inevitably involves a compromise. If we have lots of structural words, we can show many conclusive arguments to be valid, but our logic is complex and involves many different sentence connectives. If we take relatively few words as structural, we can represent fewer conclusive arguments as valid, but our formal language is a lot easier to work with. 
 
-We will start now by putting those tantalising observations about richer logics out of your mind! We'll focus to begin with on the language \TFL, and on how we can use it to model arguments in English featuring some particular structural words, including those we've just highlighted above. This collection of structural words has struck many logicians over the years as providing a good balance between simplicity and strength, ideal for an introduction to logic.
+We will start now by putting those tantalising observations about richer logics out of your mind! We'll focus to begin with on the language \TFL, and on how we can use it to model arguments in English featuring some particular sentence connectives as structural words, including those we've just highlighted above. This collection of structural words has struck many logicians over the years as providing a good balance between simplicity and strength, ideal for an introduction to logic.
 
 
 \section{Atomic sentences}
 In §\ref{s:ValidityInVirtueOfForm}, we started isolating the form of an argument by replacing quasi-canonical clauses (those including none of our list of structural words) within the argument with individual placeholder letters. Thus in the first example of this section, `it is raining outside' is a quasi-canonical clause of `If it is raining outside, then Jenny is miserable', and we replaced this clause with `A'. 
 
-Our artificial language, \TFL, pursues this idea absolutely ruthlessly. We start with some \emph{atomic sentences}, which are analogs of the canonical clauses of natural languages.  These will be the basic building blocks out of which more complex sentences are built. Unlike natural languages, these simplest sentences of \TFL\ have no interesting internal structure at all. The atomic sentences of \TFL will consist of upper case italic letters, with or without numerical subscripts. There are only twenty-six letters of the alphabet, but there is no limit to the number of atomic sentences that we might want to consider, so we add numerical subscripts to each letter to extend our library of atomic sentences indefinitely. This procedure does give us atomic sentences with some syntax, but it is irrelevant to meaning: there is no connection between `$A_{8}$' and `$A_{67}$' just because they both involve `$A$'. Likewise, there is no connection between `$D_{17}$' and `$G_{17}$' even though they share the same numerical subscript. Upper case italic letters, with or without subscripts, are all the atomic sentences there are. So, here are five different atomic sentences of \TFL:
+Our artificial language, \TFL, pursues this idea absolutely ruthlessly. We start with some \define{atomic sentences}, which are analogs of the canonical clauses of natural languages.  These will be the basic building blocks out of which more complex sentences are built. Unlike natural languages, these simplest sentences of \TFL\ have no interesting internal structure at all. The atomic sentences of \TFL\ will consist of upper case italic letters, with or without numerical subscripts. There are only twenty-six letters of the alphabet, but there is no limit to the number of atomic sentences that we might want to consider, so we add numerical subscripts to each letter to extend our library of atomic sentences indefinitely. This procedure does give us atomic sentences with some syntax, but it is irrelevant to meaning: there is no connection between `$A_{8}$' and `$A_{67}$' just because they both involve `$A$'. Likewise, there is no connection between `$D_{17}$' and `$G_{17}$' even though they share the same numerical subscript. Upper case italic letters, with or without subscripts, are all the atomic sentences there are. So, here are five different atomic sentences of \TFL:
 	$$A, P, P_{1}, P_{2}, A_{234}.$$ 
 
 Atomic sentences are the basic building blocks of \TFL. But what motivates their introduction is the fact that they can be used to represent, or \emph{symbolise}, certain English sentences. To do this, we provide a \define{symbolisation key}, such as the following, which assigns a temporary linkage between some atomic sentences of \TFL, and some quasi-canonical sentences of the natural language we are representing using \TFL, in this case, English:
@@ -162,22 +167,22 @@ In doing this, we are not fixing this symbolisation \emph{once and for all}. We 
 Given this flexibility, it isn't true that a sentence of \TFL\ \textbf{means the same thing} as any particular natural language sentence – see also §\ref{sec:symvstrans}. The question of what any given atomic sentence of \TFL\ means is actually a bit hard to make sense of; we will return to it in §\ref{s:CompleteTruthTables}.
 
 
-But it is important to understand that whatever internal structure an English sentence might have is lost when it is symbolised by an atomic sentence of \TFL. From the point of view of \TFL, an atomic sentence is just a letter. It can be used to build more complex sentences, but it cannot be taken apart. So we cannot use \TFL\ to symbolise arguments whose validity depends on structure within sentences that are symbolised as atomic sentences of \TFL, such as arguments whose conclusiveness turns on different structural words than those \TFL seeks to capture, or arguments which depend on the internal subject-predicate structure of canonical clauses.
+But it is important to understand that whatever internal structure an English sentence might have is lost when it is symbolised by an atomic sentence of \TFL. From the point of view of \TFL, an atomic sentence is just a letter. It can be used to build more complex sentences, but it cannot be taken apart. So we cannot use \TFL\ to symbolise arguments whose validity depends on structure within sentences that are symbolised as atomic sentences of \TFL, such as arguments whose conclusiveness turns on different structural words than those \TFL\ seeks to capture, or arguments which depend on the internal subject-predicate structure of canonical clauses.
 
 
 
 
 
 \keyideas{
-	\item Arguments are made of sentences, and to understand the structure of an argument it is often important to understand the syntactic structure of those sentences, including analysing those sentences into their simplest constituents, roughly, how a compound sentence can be constructed by combining canonical clauses. 
-	\item The formal language \TFL\ is designed to model the structure of some English arguments involving sentences compounded using the coordinating expressions `and', `or', `not', and `if', and related expressions.
-	\item We manage this by abstracting away any other aspects of English sentences, using structureless atomic sentences to represent clauses within those sentences that do not feature these privileged expressions.
-	\item Lots of other English words and phrases could be treated as structural, and different formal languages can be motivated by other views about the structure of natural language sentences. But \TFL\ represents a particularly well behaved aspect of English sentence structure.
+	\item Arguments are made of sentences, and to understand the structure of an argument we must understand the syntactic structure of those sentences, including analysing those sentences into their simplest constituents, roughly, how a compound sentence can be constructed by combining canonical clauses. 
+	\item The formal language \TFL\ is designed to model English arguments involving compound sentences structured by the sentence connectives `and', `or', `not', and `if', and related expressions.
+	\item We symbolise these arguments this by abstracting away any other aspects of English sentences, using structureless atomic sentences to represent clauses that do not include these special expressions.
+	\item Many English words and phrases could be treated as structural, and different formal languages can be motivated by other views about the structure of natural language sentences. But \TFL\ represents a particularly well behaved aspect of English sentence structure.
 }
 
 \practiceproblems
 
-\problempart True or false: if you are going to represent an English sentence by an atomic sentence in Sentential, the English sentence cannot have a coordinator (like ‘and’) occurring within it.
+\problempart True or false: if you are going to represent an English sentence by an atomic sentence in Sentential, the English sentence cannot have a sentence connective (like ‘and’) occurring within it.
 
 \problempart Which one or more of the following are \textbf{not} atomic sentences of \TFL? \begin{earg}
 	\item $A'$;
@@ -191,13 +196,13 @@ But it is important to understand that whatever internal structure an English se
 
 
 \chapter{Connectives}\label{s:TFLConnectives}
-In the previous section, we considered symbolising fairly basic English sentences with atomic sentences of \TFL. This leaves us wanting to deal with the English expressions `and', `or', `not', and so forth. These are \define{connectives} – they can be used to form new sentences out of old ones. And in \TFL, we shall make use of logical connectives to build complex sentences from atomic components. There are five logical connectives in \TFL, inspired by the English structural words we have encountered so far. This table summarises them, and they are explained throughout this section. 
+In the previous section, we considered symbolising relatively simple English sentences with atomic sentences of \TFL, when they did not include any of our list of structural words, the English sentence connectives `and', `or', `not', and so forth. This leaves us wanting to deal with sentences including these structural words. In \TFL, we shall make use of logical connectives to build complex sentences from atomic components. There are five logical connectives in \TFL, inspired by the English structural words we have encountered so far. This table summarises them, and they are explained throughout this section. 
 
 	\begin{table}[h]
 	\center
 	\begin{tabular}{l l l} \toprule 
 	
-	\textbf{symbol}&\textbf{what it is called}&\textbf{rough meaning}\\
+	\textbf{symbol}&\textbf{what it is called}&\textbf{rough English analog}\\
 	\midrule
 	\enot&negation&`It is not the case that $…$'\\
 	\eand&conjunction&`Both $…$\ and $…$'\\
