--- a/forallx-adl.sty
+++ b/forallx-adl.sty
@@ -30,8 +30,6 @@ SizeFeatures={Size=42}]{Constantia Bold Italic}
  \usepackage{fnpct}
 \frenchspacing 
 \usepackage{mathtools}
-\usepackage{tikz-qtree}
-% \usepackage{tikz-qtree-compat}
 
 
 
@@ -828,9 +826,10 @@ SizeFeatures={Size=42}]{Constantia Bold Italic}
 %   A. To illustrate an argument for the truth table of the material conditional
 %   B. To draw graphs illustrating small finite interpretations. 
 % All these drawings are done using tikz
-% AE: added a few more diagrams … Euler diagrams and directed graphs
+% AE: added a few more diagrams … Euler diagrams and directed graphs and syntactic trees
 \usepackage{tikz}
-\usetikzlibrary{arrows,positioning,shapes,matrix,calc,patterns} 
+\usetikzlibrary{arrows,positioning,shapes,matrix,calc,patterns}
+\usepackage{tikz-qtree}
 
 \tikzset{phantom_shape/.style={thick, fill=black!0, minimum width=30pt, minimum height=30pt}, % TB: renders the shape invisible
 		grey_shape/.style={thick, fill=black!20, draw, minimum width=30pt, minimum height=30pt}, % TB: renders a light grey shape with a black outline
